Added Features and PAges

--- a/projectCode/Landingpage/landing_page.html
+++ b/projectCode/Landingpage/landing_page.html
@@ -31,7 +31,7 @@
   <section id="hero">
     <h2>Never Miss a Dose Again</h2>
     <p>Our automated drug dispenser ensures you stay on track with your medications.</p>
-    <a href="#" class="cta-button">Get Started</a>
+    <a href="../register.html" class="cta-button">Get Started</a>
   </section>
 
   <section id="features">
@@ -56,11 +56,6 @@
     </ol>
   </section>
 
-  <section id="portfolio">
-    <h2>Portfolio</h2>
-    s
-  </section>
-
   <section id="testimonials">
     <h2>Testimonials</h2>
     <div class ="testimonial">
@@ -76,14 +71,9 @@
   <section id="call-to-action">
     <h2>Ready to Never Miss a Dose Again?</h2>
     <p>Sign up  and take control of your medication schedule.</p>
-    <a href="#" class="cta-button">Sign Up Now</a>
+    <a href="../register.html" class="cta-button">Sign Up Now</a>
   </section>
 
-  <section id="pricing">
-    <h2>Pricing</h2>
-    <p>Contact us for pricing details and subscription options.</p>
-    <a href="#" class="cta-button">Contact Us</a>
-  </section>
 
   <section id="contact">
     <h2>Contact</h2>
