--- a/projectCode/Landingpage/landing_page.html
+++ b/projectCode/Landingpage/landing_page.html
@@ -48,11 +48,11 @@
   <section id="how-it-works">
     <h2>How It Works</h2>
     <ol>
-      <li>Set up your medication schedule using the app.</li>
-      <li>The dispenser stores and organizes your medications securely.</li>
-      <li>At the scheduled time, the dispenser dispenses the correct medication.</li>
-      <li>You receive a notification on your phone or email for each dose.</li>
-      <li>Refill your medications through the app or contact our support team.</li>
+      <li>Patients register on the website and request prescriptions from doctors.</li>
+      <li>Doctors review and approve prescription requests, assigning medications to patients.</li>
+      <li>The pharmacy receives the approved prescriptions and dispenses medications to patients.</li>
+      <li>A pharmaceutical company supplies drugs to the pharmacy, ensuring an adequate stock of medications.</li>
+
     </ol>
   </section>
 
