--- a/projectCode/register.html
+++ b/projectCode/register.html
@@ -34,6 +34,11 @@
 				<i class="material-icons" style="vertical-align: middle; font-size: 24px; margin-right: 10px;">business</i> Register as a Pharmaceutical Company
 			</li>
 		</a>
+		<a href="adminRegistration.php" style="text-decoration: none; color: #333;">
+			<li style="background-color: #fff; padding: 10px; margin: 10px 0; border-radius: 4px;">
+				<i class="material-icons" style="vertical-align: middle; font-size: 24px; margin-right: 10px;">admin_panel_settings</i> Register as an Admin
+			</li>
+		</a>
 	</ul>
 
 	<a href="Landingpage/landing_page.html" style="text-decoration: none;">
